2006-10-17  Michael Goffioul  <michael.goffioul@swing.be>

	* lapack-xtra/xdlamch.f: Begin lines with spaces, not tabs.

	* misc/Makefile.in (machar.o, pic/machar.o): Specify output file
	name in compile command.

2006-10-13  Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in: Adapt rules to use $(LIBPRE).

2006-09-11  John W. Eaton  <jwe@octave.org>

	* blas-xtra/xddot.f, blas-xtra/xzdotu.f: New files.

2006-06-01  David Bateman  <dbateman@free.fr>

	* slatec-fn/dpchim.f, slatec-fn/dpchst.f: New files.

2006-05-22  John W. Eaton  <jwe@octave.org>

	* lapack/dlantr.f, lapack/zlantr.f: New files.

2006-05-03  David Bateman  <dbateman@free.fr>

	* lapack/dpocon.f, lapack/zpocon.f, lapack/dpotrs.f, 
	lapack/zpotrs.f, lapack/dtrcon.f, lapack/ztrcon.f,
	lapack/dtrtrs.f, lapack/ztrtrs.f: New files.

2006-04-29  John W. Eaton  <jwe@octave.org>

	* misc/lo-error.c (set_liboctave_warning_with_id_handler,
	liboctave_warning_with_id): New functions.
	(current_liboctave_warning_with_id_handler): New variable.
	* misc/lo-error.h (liboctave_warning_with_id_handler): New typedef.
	(current_liboctave_warning_with_id_handler, liboctave_warning_with_id
	set_liboctave_warning_with_id_handler): Provide decls.

2006-04-18  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h (F77_XFCN): Move decls to beginning of blocks for C.

2006-04-13  John W. Eaton  <jwe@octave.org>

	* misc/quit.h BEGIN_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE_1,
	END_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE): Omit unnecessary casts.
	* misc/f77-fcn.h (F77_XFCN, F77_CHAR_ARG_LEN): Likewise.

2006-04-03  David Bateman  <dbateman@free.fr>

	* ranlib/wrap.f (dgenexp, dgengam, dignpoi): New functions.

2006-03-21  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h (F77_XFCN): Save octave_interrupt_immediately and
	restore it if an exception occurs that causes a longjmp.

2005-11-01  John W. Eaton  <jwe@octave.org>

	* ranlib/ignbin.f, ranlib/ignpoi.f: Avoid arithmetic IF statements.
