@@ -1,3 +1,7 @@
+2006-10-23  John W. Eaton  <jwe@octave.org>
+
+	* Array.cc (assign2): Don't require vector assignments to be oriented.
+
 2006-10-17  John W. Eaton  <jwe@octave.org>
 
 	* lo-cieee.c: If isnan is not available but _isnan is, then define
